<resources>
    <string name="app_name">Criptografía</string>

    <string name="title">Criptografía</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_des">DESActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_aes">AESActivity</string>

    <string name="description">Comunicación en la presencia de adversarios.</string>
    <string name="input_text">Ingrese el texto que quiere cifrar.</string>
    <string name="method_cipher">Elija que metodo decea usar para cifrar:</string>
    <string name="cipher">Cifrar</string>
    <string name="no_selected">Debe elegir un metodo de cifrado.</string>
    <string name="no_text">Debe ingresar el texto a cifrar.</string>
    <string name="title_activity_learning">LearningActivity</string>
    <string name="title_activity_cipher">CipherActivity</string>
    <string name="text_main">Bienvenido a nuestra aplicación para aprender a cifrar y descifrar utilizando los sistemas de encriptación DES y AES.</string>
    <string name="text_seleccion_main">Seleccione la actividad que quieres realizar:</string>
    <string name="text_learn">Aprender</string>
    <string name="text_descrption_learn">Antes de comenzar necesitas tener varios conceptos básicos sobre la criptografia.</string>
    <string name="text_learn_concepts">Ver conceptos</string>
    <string name="text_escape">Saltar</string>
    <string name="title_conceptsactivity_list">Items</string>
    <string name="title_conceptsactivity_detail">ConceptsActivity Detail</string>
    <string name="title_activity_concepts">ConceptsActivity</string>
    <string name="description_cifrar">cifrar es un procedimiento que utiliza un algoritmo con cierta llave (llave de cifrado) que transforma un mensaje, a tal forma que sea incomprensible o, al menos, difícil de comprender a toda persona que no tenga la llave secreta (llave de descifrado) del algoritmo.</string>
    <string name="description_descifrar">Descifrar es el proceso de convertir el texto cifrado en el texto en claro.</string>
    <string name="description_llave">Clave criptográfica es una pieza de información que controla la operación de un algoritmo de criptografía, con esta se especifica la transformación del texto plano en texto cifrado, o viceversa.</string>
    <string name="description_textcip">Texto cifrado es aquel texto que ha sido cifrado con algún algoritmo determinado.</string>
    <string name="description_textplain">Texto plano es el mensaje inicial aquel que se quiere hacer ininteligibles a receptores no autorizados.</string>
    <string name="description_block_Ciphers">Cifrado por bloqueses un esquema de cifrado de clave simétrica que rompe el mensaje de texto plano en cadenas (bloques) de una longitud t fijo sobre un alfabeto A y encripta un bloque a la vez. Hay tres clases de cifrado por bloques: \n Sustitución \n Transposición \n Producto</string>
    <string name="description_Substitution">Sustituye los símbolos (o grupos de símbolos) por otros símbolos o grupos de símbolos.</string>
    <string name="description_Transposition">Simplemente permuta los símbolos en un bloque.</string>
    <string name="description_Product">Es un compuesto de cifrados de sustitución y transposición.</string>
    <string name="next">Siguiente</string>
</resources>
