<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:text="@string/title"
        android:textColor="@color/green_text_white"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/text_descrption_learn"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/ciphertext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_seleccion_main"
        android:textSize="22sp"
        android:layout_marginTop="65dp"
        />



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="65dp"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/rbtn_des"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="40dp"
            android:onClick="conceptsClick"
            android:text="@string/text_learn_concepts" />

        <Button
            android:id="@+id/rbtn_aes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="escapeClick"
            android:text="@string/text_escape" />
    </LinearLayout>



</LinearLayout>
